static/css/base.css
/* ... */
/* for profile page (we will move them to a specific file */
/* i move these styles to <style> tag for easier designing*/
#profile-menu {
    height: 100%;
    font-size: 18pt;
    background-color: #E0E0E3;

}

.profile-item {
    padding-right: 5%;
    border: thin solid rgba(3, 18, 104, 0.22);
    /*height: 30px;*/
    font-size: 1.2vw;
    padding-top: 1px;
    padding-bottom: 1px;
    margin-bottom: 2px;
    box-shadow: rgba(22, 41, 75, 0.29) 4px 2px 9px;
    cursor: pointer;
    text-align: justify;
    /*margin-right: 5%;*/
    color: gray;
    border-right: thick solid rgba(0, 0, 0, 0);
    background-color: #f5f5f5;

    /*rgba(181, 196, 255, 0.44);*/
}

.profile-item:not(.profile-item-selected):hover {
    border-right: thick solid #FFFFFF;
    border-left: thick solid #FFFFFF;
    border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
    border-bottom-left-radius: 5px;
    border-top-left-radius: 5px;
    color: white;
}

.profile-item-selected {
    border-right: thick solid #CCCCFF;
    border-left: thick solid #CCCCFF;
    border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
    border-bottom-left-radius: 5px;
    border-top-left-radius: 5px;
    background-color: rgba(181, 196, 255, 0.66);

    cursor: default;
}

.profile-content {
    font-size: 14pt;
    padding-top: 30px;
    float: left;;
}

.user-panel {
    position: fixed;
    right: 0px;
    width: 240px;
    height: 260px;
    top: 20%;
    z-index: 9000;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    background-color: #006687;

}

/* Chrome, Safari, Opera */

.panel-handle {
    position: relative;

    float: left;

    background-color: rgba(181, 196, 255, 0.66); /*TODO : Colors are not suitable    */
    margin-left: 0px;
    width: 10px;
    height: 70px;
    margin-top: 80px;
    cursor: pointer;

}

.panel-handle-opened {
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.panel-handle-closed {
    border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

.panel-handle-arm {
    position: relative;

    background-color: rgba(139, 158, 231, 1);
    width: 12px;
    height: 30px;
    margin-top: 20px;

}

.panel-handle-opened .panel-handle-arm {

    float: right;
    margin-right: -5px;
    border-bottom-right-radius: 6px;
    border-top-right-radius: 6px;
    border-top-left-radius: 2px;
    border-bottom-left-radius: 2px;
}

.panel-handle-closed .panel-handle-arm {

    float: left;

    margin-left: -13px;

    border-bottom-left-radius: 10px;
    border-top-left-radius: 10px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.arm-pointer {
    position: relative;

    margin-top: 50%;
}

.arm-pointer:hover {
    color: #a3a3a3;
}

.panel-handle-opened .arm-pointer {
    float: right;
}

.panel-handle-closed .arm-pointer {

    float: left;

}

.profile-content {
    border-radius: 19px 19px;
    border: solid thin rgba(200, 200, 255, 0.23);
    min-height: 500px;
    /*max-height: 500px;*/

}

.panel {
    border-radius: 7px !important;
}

.panel-footer {
    background-color: #dddddd;
}

/* end of profile */
.exam-header {
    font-size: 18pt;
}

.navbar .container {
    width: 100%;
    padding-right: 40px;
    max-width: 100%;
    padding-left: 0px;
}

.navbar .glyphicon {
    top: 0px;
}

.navbar-inverse .navbar-nav li a {
    color: #92B4FC;
}

.answer-option {
    line-height: 34px;
}

.answer-option:hover {
    background-color: #e9e9e9;

}

.exam-panel {
    position: fixed;
    right: 10px;
    width: 22%;
    height: 50%;

}

.exam-panel-row {
    border-color: rgb(70, 110, 190);
    border-style: solid;
    border-width: 5px;
    margin-top: 15px;
    height: 50px;
    padding: 5px;
    border-radius: 7px 7px;;

    vertical-align: middle;
}

.big-exam-panel {
    height: 70px;
}

.exam-panel-row .glyphicon {
    font-size: 30px;
    color: rgb(70, 110, 190);
}

/* modal css */

.modal-title {
    font-family: Yekan;
    font-weight: bold;
}

.modal-content {
    position: relative;
    background-color: #ffffff;
    border: 1px solid #999999;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 6px;
    outline: none;
    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    background-clip: padding-box;
}

/* home css */
section {
    padding-top: 20px;
    text-align: center;
    vertical-align: middle;
    margin: auto;
    color: #92B4FC;
}

#one {
    background-color: #799DE9;
    padding-top: 0px;
    color: #ffff00;
}

#two {
    /*background-color: #565656;*/
    background-color: #92B4FC;
    padding-top: 0px;
    color: #92B4FC;
}

#three {
    background-color: #92B4FC;
    padding-top: 0px;
    color: #92B4FC;
}

#four {
    background-color: #414D66;
    color: #92B4FC;
}

.jumbotron {
    background-color: #414D66;
    color: #ffddaa;
    padding-top: 30px;
    padding-bottom: 2%;
    text-align: right;
}

@media (min-width: 100px) {

    h2 {
        font-size: 3vw;
        font-weight: bold;
    }

    .jumbotron p {
        font-size: 2.2vw;
        /*color: #6585C9;*/
    }

    .jumbotron p a {
        font-size: 2.9vw;
        border: solid 1px #5970A1;
        border-radius: 6px;
        color: #f5e79e;

    }

    #happy-image {
        width: 250px;
        height: 250px;
    }
}

@media (min-width: 600px) {

    h2 {
        font-size: 3.4vw;
        font-weight: bold;
    }

    .jumbotron p {
        font-size: 1.9vw;
        /*color: black;*/
    }

    .jumbotron p a {
        font-size: 2.9vw;
        border: solid 1px #449955;
        border-radius: 6px;
        color: #6585C9;

    }

    #happy-image {
        width: 350px;
        height: 350px;
    }
}
/* ... */

